<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bmi.MainActivity" >

    <TextView
        android:id="@+id/heightView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height" />

    <Button
        android:id="@+id/calButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/weightText"
        android:layout_below="@+id/weightText"
        android:layout_marginTop="32dp"
        android:text="@string/submit" />

    <TextView
        android:id="@+id/resultView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/calButton"
        android:layout_below="@+id/calButton"
        android:layout_marginTop="27dp"
        android:text="" />

    <TextView
        android:id="@+id/sugestView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/resultView"
        android:layout_below="@+id/resultView"
        android:layout_marginTop="14dp"
        android:text="" />

    <EditText
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/heightView"
        android:layout_below="@+id/heightView"
        android:ems="10"
        android:hint="@string/height_hint"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/weightView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/height"
        android:layout_below="@+id/height"
        android:layout_marginTop="22dp"
        android:text="@string/weight" />

    <EditText
        android:id="@+id/weightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/weightView"
        android:layout_below="@+id/weightView"
        android:ems="10"
        android:hint="@string/weight_hint"
        android:inputType="numberDecimal" />

</RelativeLayout>
